// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupPhraseContainer renders correctly for input backup phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#666666"
      shouldShowClipboard={[Function]}
      style={
        [
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    />
  </View>
</View>
`;

exports[`BackupPhraseContainer renders correctly for readonly backup 12-word phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="prosper winner find donate tape history measure umbrella agent patrol want rhythm"
    style={
      {
        "alignContent": "center",
        "backgroundColor": "#F9F6F0",
        "borderRadius": 8,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginTop": 8,
        "padding": 8,
      }
    }
    testID="AccountKeyWordsContainer"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginHorizontal": 12,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          1
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          prosper
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          2
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          winner
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          3
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          find
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          4
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          donate
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          5
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          tape
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          6
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          history
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          7
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          measure
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          8
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          umbrella
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          9
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          agent
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          10
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          patrol
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          11
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          want
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginVertical": 11,
            },
            {
              "width": "50%",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          12
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          rhythm
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BackupPhraseContainer renders correctly for readonly backup 24-word phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    style={
      {
        "alignContent": "center",
        "backgroundColor": "#F9F6F0",
        "borderRadius": 8,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginTop": 8,
        "padding": 8,
      }
    }
    testID="AccountKeyWordsContainer"
  >
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 22,
          "lineHeight": 32,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake
    </Text>
  </View>
</View>
`;
